// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a table with selectable rows 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -109,11 +109,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 0 Not Selected
+             Row 0 Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -165,11 +165,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 1 Not Selected
+             Row 1 Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -221,11 +221,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 2 Not Selected
+             Row 2 Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -277,11 +277,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 2.0 Not Selected
+             Row 2.0 Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -333,11 +333,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 2.1 Not Selected
+             Row 2.1 Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -389,11 +389,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 3 Not Selected
+             Row 3 Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -445,11 +445,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 4 Not Selected
+             Row 4 Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -501,11 +501,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 5 Not Selected
+             Row 5 Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -557,11 +557,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 6 Not Selected
+             Row 6 Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -613,11 +613,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 6.0 Not Selected
+             Row 6.0 Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -669,11 +669,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 6.1 Not Selected
+             Row 6.1 Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -725,11 +725,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 7 Not Selected
+             Row 7 Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -781,11 +781,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 8 Not Selected
+             Row 8 Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -837,11 +837,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 9 Not Selected
+             Row 9 Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -893,11 +893,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 10 Not Selected
+             Row 10 Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -949,11 +949,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 10.0 Not Selected
+             Row 10.0 Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -1005,11 +1005,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 10.1 Not Selected
+             Row 10.1 Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -1061,11 +1061,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 11 Not Selected
+             Row 11 Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -1117,11 +1117,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 12 Not Selected
+             Row 12 Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -1173,11 +1173,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 13 Not Selected
+             Row 13 Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -1229,11 +1229,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 14 Not Selected
+             Row 14 Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -1285,11 +1285,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 14.0 Not Selected
+             Row 14.0 Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -1341,11 +1341,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 14.1 Not Selected
+             Row 14.1 Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -1397,11 +1397,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 15 Not Selected
+             Row 15 Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -1453,11 +1453,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 16 Not Selected
+             Row 16 Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -1509,11 +1509,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 17 Not Selected
+             Row 17 Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -1565,11 +1565,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 18 Not Selected
+             Row 18 Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -1621,11 +1621,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 18.0 Not Selected
+             Row 18.0 Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -1677,11 +1677,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 18.1 Not Selected
+             Row 18.1 Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -1733,11 +1733,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 19 Not Selected
+             Row 19 Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -1789,11 +1789,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 20 Not Selected
+             Row 20 Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -1845,11 +1845,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 21 Not Selected
+             Row 21 Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -1901,11 +1901,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 22 Not Selected
+             Row 22 Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -1957,11 +1957,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 22.0 Not Selected
+             Row 22.0 Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -2013,11 +2013,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 22.1 Not Selected
+             Row 22.1 Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -2069,11 +2069,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 23 Not Selected
+             Row 23 Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -2106,15 +2106,52 @@
          </td>
        </tr>
      </tbody>
    </table>
    <p>
-     Selected Rows: 0
+     Selected Rows: 36
    </p>
    <pre>
      <code>
        {
-   "selectedRows": []
+   "selectedRows": [
+     "0",
+     "1",
+     "2",
+     "2.0",
+     "2.1",
+     "3",
+     "4",
+     "5",
+     "6",
+     "6.0",
+     "6.1",
+     "7",
+     "8",
+     "9",
+     "10",
+     "10.0",
+     "10.1",
+     "11",
+     "12",
+     "13",
+     "14",
+     "14.0",
+     "14.1",
+     "15",
+     "16",
+     "17",
+     "18",
+     "18.0",
+     "18.1",
+     "19",
+     "20",
+     "21",
+     "22",
+     "22.0",
+     "22.1",
+     "23"
+   ]
  }
      </code>
    </pre>
  </DocumentFragment>
`;

exports[`renders a table with selectable rows 2`] = `
Snapshot Diff:
- First value
+ Second value

@@ -109,11 +109,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 0 Selected
+             Row 0 Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -165,11 +165,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 1 Selected
+             Row 1 Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -221,11 +221,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 2 Selected
+             Row 2 Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -277,11 +277,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 2.0 Selected
+             Row 2.0 Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -333,11 +333,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 2.1 Selected
+             Row 2.1 Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -389,11 +389,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 3 Selected
+             Row 3 Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -445,11 +445,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 4 Selected
+             Row 4 Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -501,11 +501,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 5 Selected
+             Row 5 Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -557,11 +557,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 6 Selected
+             Row 6 Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -613,11 +613,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 6.0 Selected
+             Row 6.0 Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -669,11 +669,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 6.1 Selected
+             Row 6.1 Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -725,11 +725,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 7 Selected
+             Row 7 Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -781,11 +781,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 8 Selected
+             Row 8 Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -837,11 +837,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 9 Selected
+             Row 9 Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -893,11 +893,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 10 Selected
+             Row 10 Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -949,11 +949,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 10.0 Selected
+             Row 10.0 Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -1005,11 +1005,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 10.1 Selected
+             Row 10.1 Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -1061,11 +1061,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 11 Selected
+             Row 11 Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -1117,11 +1117,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 12 Selected
+             Row 12 Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -1173,11 +1173,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 13 Selected
+             Row 13 Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -1229,11 +1229,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 14 Selected
+             Row 14 Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -1285,11 +1285,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 14.0 Selected
+             Row 14.0 Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -1341,11 +1341,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 14.1 Selected
+             Row 14.1 Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -1397,11 +1397,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 15 Selected
+             Row 15 Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -1453,11 +1453,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 16 Selected
+             Row 16 Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -1509,11 +1509,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 17 Selected
+             Row 17 Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -1565,11 +1565,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 18 Selected
+             Row 18 Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -1621,11 +1621,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 18.0 Selected
+             Row 18.0 Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -1677,11 +1677,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 18.1 Selected
+             Row 18.1 Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -1733,11 +1733,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 19 Selected
+             Row 19 Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -1789,11 +1789,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 20 Selected
+             Row 20 Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -1845,11 +1845,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 21 Selected
+             Row 21 Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -1901,11 +1901,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 22 Selected
+             Row 22 Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -1957,11 +1957,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 22.0 Selected
+             Row 22.0 Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -2013,11 +2013,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 22.1 Selected
+             Row 22.1 Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -2069,11 +2069,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 23 Selected
+             Row 23 Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -2106,52 +2106,15 @@
          </td>
        </tr>
      </tbody>
    </table>
    <p>
-     Selected Rows: 36
+     Selected Rows: 0
    </p>
    <pre>
      <code>
        {
-   "selectedRows": [
-     "0",
-     "1",
-     "2",
-     "2.0",
-     "2.1",
-     "3",
-     "4",
-     "5",
-     "6",
-     "6.0",
-     "6.1",
-     "7",
-     "8",
-     "9",
-     "10",
-     "10.0",
-     "10.1",
-     "11",
-     "12",
-     "13",
-     "14",
-     "14.0",
-     "14.1",
-     "15",
-     "16",
-     "17",
-     "18",
-     "18.0",
-     "18.1",
-     "19",
-     "20",
-     "21",
-     "22",
-     "22.0",
-     "22.1",
-     "23"
-   ]
+   "selectedRows": []
  }
      </code>
    </pre>
  </DocumentFragment>
`;

exports[`renders a table with selectable rows 3`] = `
Snapshot Diff:
- First value
+ Second value

@@ -109,11 +109,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 0 Not Selected
+             Row 0 Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -221,11 +221,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 2 Not Selected
+             Row 2 Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -277,11 +277,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 2.0 Not Selected
+             Row 2.0 Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -333,11 +333,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 2.1 Not Selected
+             Row 2.1 Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -2106,15 +2106,20 @@
          </td>
        </tr>
      </tbody>
    </table>
    <p>
-     Selected Rows: 0
+     Selected Rows: 4
    </p>
    <pre>
      <code>
        {
-   "selectedRows": []
+   "selectedRows": [
+     "0",
+     "2",
+     "2.0",
+     "2.1"
+   ]
  }
      </code>
    </pre>
  </DocumentFragment>
`;

exports[`renders a table with selectable rows 4`] = `
Snapshot Diff:
- First value
+ Second value

@@ -221,11 +221,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 2 Selected
+             Row 2 Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -277,11 +277,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 2.0 Selected
+             Row 2.0 Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -333,11 +333,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 2.1 Selected
+             Row 2.1 Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -2106,20 +2106,17 @@
          </td>
        </tr>
      </tbody>
    </table>
    <p>
-     Selected Rows: 4
+     Selected Rows: 1
    </p>
    <pre>
      <code>
        {
    "selectedRows": [
-     "0",
-     "2",
-     "2.0",
-     "2.1"
+     "0"
    ]
  }
      </code>
    </pre>
  </DocumentFragment>
`;

exports[`renders a table with selectable rows 5`] = `
Snapshot Diff:
- First value
+ Second value

@@ -277,11 +277,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 2.0 Not Selected
+             Row 2.0 Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -2106,17 +2106,18 @@
          </td>
        </tr>
      </tbody>
    </table>
    <p>
-     Selected Rows: 1
+     Selected Rows: 2
    </p>
    <pre>
      <code>
        {
    "selectedRows": [
-     "0"
+     "0",
+     "2.0"
    ]
  }
      </code>
    </pre>
  </DocumentFragment>
`;

exports[`renders a table with selectable rows 6`] = `
Snapshot Diff:
- First value
+ Second value

@@ -333,11 +333,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 2.1 Not Selected
+             Row 2.1 Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -2106,18 +2106,19 @@
          </td>
        </tr>
      </tbody>
    </table>
    <p>
-     Selected Rows: 2
+     Selected Rows: 3
    </p>
    <pre>
      <code>
        {
    "selectedRows": [
      "0",
-     "2.0"
+     "2.0",
+     "2.1"
    ]
  }
      </code>
    </pre>
  </DocumentFragment>
`;

exports[`renders a table with selectable rows 7`] = `
Snapshot Diff:
- First value
+ Second value

@@ -333,11 +333,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Row 2.1 Selected
+             Row 2.1 Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -2106,19 +2106,18 @@
          </td>
        </tr>
      </tbody>
    </table>
    <p>
-     Selected Rows: 3
+     Selected Rows: 2
    </p>
    <pre>
      <code>
        {
    "selectedRows": [
      "0",
-     "2.0",
-     "2.1"
+     "2.0"
    ]
  }
      </code>
    </pre>
  </DocumentFragment>
`;
